--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,16 +1,40 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:dividerPadding="8dp">
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp"
+        android:id="@+id/viewindicator">
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:minHeight="180dp"
+            android:maxHeight="240dp" />
+
+    </androidx.cardview.widget.CardView>
 
     <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="none">
+
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
             <Button
                 android:id="@+id/btn_latest"
                 android:text="二手"
@@ -18,7 +42,8 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:drawableLeft="@mipmap/jiaoy"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:backgroundTint="@color/select_color"/>
             <Button
                 android:id="@+id/btn_confession"
                 android:text="交友"
@@ -26,15 +51,17 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:drawableLeft="@mipmap/jiaoyou"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:backgroundTint="@color/select_color"/>
             <Button
                 android:id="@+id/btn_purchase"
                 android:text="拼团"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-               android:drawableLeft="@mipmap/paotui"
-                android:layout_weight="1"/>
+               android:drawableLeft="@mipmap/pintuan"
+                android:layout_weight="1"
+                android:backgroundTint="@color/select_color"/>
             <Button
                 android:id="@+id/btn_internship"
                 android:text="跑腿"
@@ -42,7 +69,8 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:drawableLeft="@mipmap/paotui"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:backgroundTint="@color/select_color"/>
         </LinearLayout>
     </HorizontalScrollView>
 
@@ -50,5 +78,5 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 </LinearLayout>
